--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env micro --port=3333",
+    "build": "mkdir build && cp index.js build/index.js && cp -r node_modules build/node_modules && cp -r package.json build/package.json && cp -r README.md build/README.md && cp -r micro-cors.js build/micro-cors.js",
     "dev": "micro-dev"
   },
   "keywords": [],
@@ -16,7 +17,8 @@
   },
   "dependencies": {
     "cross-env": "^5.1.4",
-    "micro": "^9.1.4",
+    "express": "^5.1.0",
+    "micro": "9.1.4",
     "node-fetch": "^2.1.2",
     "now": "^21.0.1"
   },
